overflow bug on about page fixed

--- a/css/style.css
+++ b/css/style.css
@@ -210,7 +210,7 @@ main.portfolio {
   align-items: center;
   justify-content: center;
   margin: 2rem 0;
-  width: 50vw;
+  width: 50%;
 }
 
 .about span {
